# pricetracker-v2

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/agents/: backend-agent.agent.md
.github/instructions/: pricetracker-backend.instructions.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/config/: db.py  logger.py  requester.py  settings.py
backend/app/controllers/: auth.py  logger.py
backend/app/schemas/: __init__.py  products.py  schedules.py  users.py
backend/app/web/: amazon.py
docs/backend/: DB_USAGE.md  LOGGING.md
frontend/: package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/routes/: __root.tsx  about.tsx  index.tsx
frontend/src/routes/about/: index.tsx
mailpit/: generate-self-signed-cert.sh
